specify pid in partial final. +misc

--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -43,9 +43,9 @@
       connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseApril2012_before_cake;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="EomApp1.Properties.Settings.OverrideConnectionString"
-      connectionString="Data Source=.;Initial Catalog=DADatabaseJune2012;Integrated Security=True" />
+      connectionString="Data Source=biz2\da;Initial Catalog=zDADatabaseJuly2012Test;Integrated Security=True" />
     <add name="EomApp1.Properties.Settings.EomToolSecurityConnectionString"
-      connectionString="Data Source=biz2\da;Initial Catalog=EomToolSecurity;Integrated Security=True;aaron-pavilion\aaron"
+      connectionString="Data Source=biz2\da;Initial Catalog=EomToolSecurity;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="Nov10Eom2Entities" connectionString="metadata=res://*/Formss.PubRep1.Data.PublisherReportModel.csdl|res://*/Formss.PubRep1.Data.PublisherReportModel.ssdl|res://*/Formss.PubRep1.Data.PublisherReportModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=aaron.directagents.local\sqlexpress;Initial Catalog=Nov10Eom2;Integrated Security=True;MultipleActiveResultSets=True&quot;"
       providerName="System.Data.EntityClient" />
@@ -207,13 +207,13 @@
   <applicationSettings>
     <EomApp1.Properties.Settings>
       <setting name="OverrideDate" serializeAs="String">
-        <value>2012-06-01</value>
-      </setting>
-      <setting name="TestUserIdentities" serializeAs="String">
-        <value>directagents\aanodide,directagents\kslesinsky,aaron-pavillion\aaron</value>
+        <value>2012-07-01</value>
       </setting>
       <setting name="TestMode" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="TestUserIdentities" serializeAs="String">
+        <value>directagents\aanodide,directagents\kslesinsky,aaron-pavillion\aaron</value>
       </setting>
     </EomApp1.Properties.Settings>
   </applicationSettings>
