--- a/1/EomTool/EomApp1/Properties/Settings.settings
+++ b/1/EomTool/EomApp1/Properties/Settings.settings
@@ -115,9 +115,6 @@
     <Setting Name="OverrideDate" Type="System.DateTime" Scope="Application">
       <Value Profile="(Default)">2012-07-01</Value>
     </Setting>
-    <Setting Name="TestUserIdentities" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">directagents\aanodide,directagents\kslesinsky</Value>
-    </Setting>
     <Setting Name="TestMode" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
@@ -128,6 +125,9 @@
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=EomToolSecurity;Integrated Security=True</Value>
+    </Setting>
+    <Setting Name="TestUserIdentities" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">directagents\aanodide,directagents\kslesinsky,aaron-pavillion\aaron</Value>
     </Setting>
   </Settings>
 </SettingsFile>
