--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -91,6 +91,9 @@
       providerName="System.Data.EntityClient" />
     <add name="EomToolSecurityEntities" connectionString="metadata=res://*/Screens.Security.Models.EomToolSecurity.csdl|res://*/Screens.Security.Models.EomToolSecurity.ssdl|res://*/Screens.Security.Models.EomToolSecurity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=EomToolSecurity;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
+    <add name="EomApp1.Properties.Settings.DADatabaseR1ConnectionString1"
+      connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseR1;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <userSettings>
     <EomApp1.Properties.Settings>
