--- a/1/EomTool/EomApp1/Properties/Settings.settings
+++ b/1/EomTool/EomApp1/Properties/Settings.settings
@@ -108,9 +108,9 @@
     <Setting Name="OverrideConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=biz2\da;Initial Catalog=zDADatabaseJuly2012Test;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=biz2\da;Initial Catalog=DADatabaseJuly2012;User=sa;Password=sp0ngbOb&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=zDADatabaseJuly2012Test;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=DADatabaseJuly2012;User=sa;Password=sp0ngbOb</Value>
     </Setting>
     <Setting Name="OverrideDate" Type="System.DateTime" Scope="Application">
       <Value Profile="(Default)">2012-07-01</Value>
