--- a/1/EomTool/EomApp1/EomApp1.csproj
+++ b/1/EomTool/EomApp1/EomApp1.csproj
@@ -122,6 +122,7 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="Extensions.cs" />
     <Compile Include="Screens\Accounting\Controls\AccountingSheet.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -401,18 +402,18 @@
       <DependentUpon>PublisherReportDataSet1.xsd</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Screens\Security\Data\DataSet1.Designer.cs">
+    <Compile Include="Screens\Security\Data.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>DataSet1.xsd</DependentUpon>
+      <DependentUpon>Data.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Screens\Security\Forms\SecuritySetupForm.cs">
+    <Compile Include="Screens\Security\SecuritySetupForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Screens\Security\Forms\SecuritySetupForm.Designer.cs">
+    <Compile Include="Screens\Security\SecuritySetupForm.Designer.cs">
       <DependentUpon>SecuritySetupForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Screens\Security\Models\EomToolSecurity.Designer.cs">
+    <Compile Include="Screens\Security\EomToolSecurity.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>EomToolSecurity.edmx</DependentUpon>
@@ -707,7 +708,7 @@
     <EmbeddedResource Include="Screens\Final\UI\VerifiedRevenueForm.resx">
       <DependentUpon>VerifiedRevenueForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Screens\Security\Forms\SecuritySetupForm.resx">
+    <EmbeddedResource Include="Screens\Security\SecuritySetupForm.resx">
       <DependentUpon>SecuritySetupForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\Synch\AddAffiliateSetupForm.resx">
@@ -1047,20 +1048,22 @@
     <None Include="Screens\PubRep1\Data\PublisherReportDataSet1.xss">
       <DependentUpon>PublisherReportDataSet1.xsd</DependentUpon>
     </None>
-    <EntityDeploy Include="Screens\Security\Models\EomToolSecurity.edmx">
+    <EntityDeploy Include="Screens\Security\EomToolSecurity.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>EomToolSecurity.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Screens\Security\Data\DataSet1.xsc">
-      <DependentUpon>DataSet1.xsd</DependentUpon>
+    <None Include="Screens\Security\Data.xsc">
+      <DependentUpon>Data.xsd</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
-    <None Include="Screens\Security\Data\DataSet1.xsd">
+    <None Include="Screens\Security\Data.xsd">
       <SubType>Designer</SubType>
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>DataSet1.Designer.cs</LastGenOutput>
+      <LastGenOutput>Data.Designer.cs</LastGenOutput>
     </None>
-    <None Include="Screens\Security\Data\DataSet1.xss">
-      <DependentUpon>DataSet1.xsd</DependentUpon>
+    <None Include="Screens\Security\Data.xss">
+      <DependentUpon>Data.xsd</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Screens\Settings\SettingsDataSet1.xsc">
       <DependentUpon>SettingsDataSet1.xsd</DependentUpon>
@@ -1309,7 +1312,7 @@
     <Content Include="Misc\showxml.xslt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Screens\Security\Models\EomToolSecurity.edmx.sql" />
+    <Content Include="Screens\Security\EomToolSecurity.edmx.sql" />
     <None Include="Service References\Cake.WebServices._4.Reports\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
