--- a/1/EomTool/EomToolSecurityWeb/EomToolSecurity/web.config
+++ b/1/EomTool/EomToolSecurityWeb/EomToolSecurity/web.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.web>
+    <authentication mode="Windows">
+    </authentication>
+    <authorization>
+      <!--<allow users="*" />-->
+      <allow roles="directagents\Biz App Admins" />
+      <deny users="*" />
+    </authorization>
     <compilation debug="false" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
