removing passwords from connection strings

--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -43,7 +43,7 @@
       connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseApril2012_before_cake;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="EomApp1.Properties.Settings.OverrideConnectionString"
-      connectionString="Data Source=biz2\da;Initial Catalog=zDADatabaseJuly2012Test;User=sa;Password=sp0ngbOb" />
+      connectionString="Data Source=biz2\da;Initial Catalog=zDADatabaseJuly2012Test;Integrated Security=True" />
     <add name="EomApp1.Properties.Settings.EomToolSecurityConnectionString"
       connectionString="Data Source=biz2\da;Initial Catalog=EomToolSecurity;Integrated Security=True"
       providerName="System.Data.SqlClient" />
@@ -51,7 +51,7 @@
       connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseR1;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="EomApp1.Properties.Settings.OverrideEomToolSecurityConnectionString"
-      connectionString="Data Source=biz2\da;Initial Catalog=EomToolSecurity;User=sa;Password=sp0ngbOb" />
+      connectionString="Data Source=biz2\da;Initial Catalog=EomToolSecurity;Integrated Security=True" />
     <add name="Nov10Eom2Entities" connectionString="metadata=res://*/Formss.PubRep1.Data.PublisherReportModel.csdl|res://*/Formss.PubRep1.Data.PublisherReportModel.ssdl|res://*/Formss.PubRep1.Data.PublisherReportModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=aaron.directagents.local\sqlexpress;Initial Catalog=Nov10Eom2;Integrated Security=True;MultipleActiveResultSets=True&quot;"
       providerName="System.Data.EntityClient" />
     <add name="DADatabaseR1Entities" connectionString="metadata=res://*/Formss.Accounting.Data.AccountingModel.csdl|res://*/Formss.Accounting.Data.AccountingModel.ssdl|res://*/Formss.Accounting.Data.AccountingModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=aaron\sqlexpress;Initial Catalog=DADatabaseR1;Integrated Security=True;MultipleActiveResultSets=True&quot;"
