extra item filters

--- a/1/EomTool/DAgents.Common/DirectAgents.Common.csproj
+++ b/1/EomTool/DAgents.Common/DirectAgents.Common.csproj
@@ -56,6 +56,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -63,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BindingSourceFilter.cs" />
     <Compile Include="ConsoleHelper.cs">
       <SubType>Code</SubType>
     </Compile>
