disable editing while filters are active and always show added rows regardless

--- a/1/EomTool/EomApp1/EomApp1.csproj
+++ b/1/EomTool/EomApp1/EomApp1.csproj
@@ -286,6 +286,7 @@
     <Compile Include="Screens\DBView\Forms\DBViewForm1.Designer.cs">
       <DependentUpon>DBViewForm1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Screens\Extra\BindingSourceFilter.cs" />
     <Compile Include="Screens\Extra\ExtraItemsUserControl.Designer.cs">
       <DependentUpon>ExtraItemsUserControl.cs</DependentUpon>
     </Compile>
