--- a/1/EomTool/EomApp1.Test/EomApp1.Test.csproj
+++ b/1/EomTool/EomApp1.Test/EomApp1.Test.csproj
@@ -36,6 +36,8 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core">
@@ -54,8 +56,11 @@
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
@@ -63,9 +68,14 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExtensionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\EomApp.Controls.Wpf\EomApp.Controls.Wpf.csproj">
+      <Project>{6DE348DC-663F-4251-A8E4-A1107E1B0497}</Project>
+      <Name>EomApp.Controls.Wpf</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\EomTool\CakeMarketing\CakeMarketing.csproj">
       <Project>{268E422D-0ED9-4922-AE6E-775534A8EDAC}</Project>
       <Name>CakeMarketing</Name>
