--- a/1/EomTool/EomApp1/EomApp1.csproj
+++ b/1/EomTool/EomApp1/EomApp1.csproj
@@ -68,7 +68,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>EomApp1.Program</StartupObject>
@@ -159,10 +159,24 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>EddyAccountingView.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Screens\Accounting\Data\ItemsDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ItemsDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Screens\Accounting\Data\UnitCountDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>UnitCountDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Accounting\Forms\AccountingSheet2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Screens\Accounting\Forms\AccountingSheet2.Designer.cs">
+      <DependentUpon>AccountingSheet2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Accounting\Forms\AccountingSheet2Base.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Screens\Accounting\Forms\AccountingSheetForm.cs">
       <SubType>Form</SubType>
@@ -693,6 +707,9 @@
     <Compile Include="UI\MaskedDialog.cs">
       <SubType>Form</SubType>
     </Compile>
+    <EmbeddedResource Include="Screens\Accounting\Forms\AccountingSheet2.resx">
+      <DependentUpon>AccountingSheet2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Screens\Advertiser2\Controls\Advertisers2Control.resx">
       <DependentUpon>Advertisers2Control.cs</DependentUpon>
     </EmbeddedResource>
@@ -774,6 +791,17 @@
     </None>
     <None Include="Screens\Accounting\Data\EddyAccountingView.xss">
       <DependentUpon>EddyAccountingView.xsd</DependentUpon>
+    </None>
+    <None Include="Screens\Accounting\Data\ItemsDataSet.xsc">
+      <DependentUpon>ItemsDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Screens\Accounting\Data\ItemsDataSet.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>ItemsDataSet.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Screens\Accounting\Data\ItemsDataSet.xss">
+      <DependentUpon>ItemsDataSet.xsd</DependentUpon>
     </None>
     <None Include="Screens\Accounting\Data\UnitCountDataSet.xsc">
       <DependentUpon>UnitCountDataSet.xsd</DependentUpon>
