--- a/1/EomTool/EomToolWeb/Views/Web.config
+++ b/1/EomTool/EomToolWeb/Views/Web.config
@@ -17,6 +17,9 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
+        <add namespace="EomToolWeb.HtmlHelpers" />
+        <add namespace="EomToolWeb.Models" />
+        <add namespace="EomTool.Domain.Entities" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
