--- a/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
+++ b/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
@@ -47,7 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IAffiliateRepository.cs" />
+    <Compile Include="Abstract\IMainRepository.cs" />
     <Compile Include="Concrete\AffiliateRepository.cs" />
+    <Compile Include="Concrete\MainRepository.cs" />
     <Compile Include="Entities\EomEntities.cs" />
     <Compile Include="Entities\EomModel.Designer.cs">
       <AutoGen>True</AutoGen>
