eomtool mb workflow in progress

--- a/1/EomTool/DAgents.Common/DirectAgents.Common.csproj
+++ b/1/EomTool/DAgents.Common/DirectAgents.Common.csproj
@@ -87,6 +87,7 @@
     <Compile Include="ObjectMapper.cs" />
     <Compile Include="ProgramObject.cs" />
     <Compile Include="SqlBatchUtil.cs" />
+    <Compile Include="SqlUtility.cs" />
     <Compile Include="WindowsIdentityHelper.cs" />
     <Compile Include="XDocumentExtensions.cs" />
     <Compile Include="ILogger.cs" />
