--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -247,6 +247,7 @@
     <None Include="readme.txt" />
     <Content Include="Views\Publishers\List.cshtml" />
     <Content Include="Views\Payouts\List.cshtml" />
+    <Content Include="Views\Payouts\PayoutsGrid.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
